--- a/.github/workflows/_templates/ci-node.yml
+++ b/.github/workflows/_templates/ci-node.yml
@@ -1,11 +1,55 @@
 name: _ci-node (template)
 on: { workflow_call: {} }
+
 jobs:
   ci:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      id-token: write
+      packages: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with: { node-version: '18' }
+
       - run: npm ci
       - run: npm test -- --ci
+
+      # === DEMO path: push to GHCR (no cloud creds) ===
+      - name: Login to GHCR (demo)
+        if: ${{ vars.DEMO_MODE == 'true' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push (GHCR demo)
+        if: ${{ vars.DEMO_MODE == 'true' }}
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ vars.IMAGE_REPO }}:${{ github.run_number }}
+
+      # === REAL path: push to ACR (requires Azure OIDC) ===
+      - name: Azure login (real)
+        if: ${{ vars.DEMO_MODE != 'true' }}
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Build & push (ACR real)
+        if: ${{ vars.DEMO_MODE != 'true' }}
+        uses: docker/build-push-action@v6
+        env:
+          ACR_NAME: ${{ vars.ACR_NAME }}
+        with:
+          context: .
+          push: true
+          tags: ${{ env.ACR_NAME }}.azurecr.io/app:${{ github.run_number }}
