--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   call-deploy-template:
-    uses: ./.github/workflows/_templates/deploy-aks-helm.yml
+    uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/_templates/deploy-aks-helm.yml@main
     with:
       env_name:  ${{ inputs.env_name }}
       image_repo: ${{ vars.IMAGE_REPO }}
