--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   call-deploy-template:
+    permissions:
+      contents: read
+      id-token: write          # needed for az login (real path)
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
     with:
       env_name:  ${{ inputs.env_name }}
