fix: YAML spacing for workflow_call inputs in deploy reusable

--- a/.github/workflows/deploy-aks-helm.yml
+++ b/.github/workflows/deploy-aks-helm.yml
@@ -1,11 +1,12 @@
 name: _deploy-aks-helm (template)
+
 on:
   workflow_call:
     inputs:
-      env_name:  { type: string, required: true }
-      image_repo:{ type: string, required: true }
-      image_tag: { type: string, required: true }
-      chart_path:{ type: string, required: true }
+      env_name:   { type: string, required: true }
+      image_repo: { type: string, required: true }
+      image_tag:  { type: string, required: true }
+      chart_path: { type: string, required: true }
 
 jobs:
   deploy:
@@ -15,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # === DEMO path: no Azure, lint & render chart ===
+      # DEMO path: Helm lint/template only (no Azure)
       - name: Helm lint (demo)
         if: ${{ vars.DEMO_MODE == 'true' }}
         run: |
@@ -30,7 +31,7 @@ jobs:
             --set image.tag=${{ inputs.image_tag }} \
             | head -n 60
 
-      # === REAL path: AKS login + Helm upgrade ===
+      # REAL path: AKS login + Helm upgrade
       - name: Azure login (real)
         if: ${{ vars.DEMO_MODE != 'true' }}
         uses: azure/login@v2
