--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -1,15 +1,26 @@
 name: service-ci
 on:
   pull_request:
-  push: { branches: [ "main" ] }
+  push:
+    branches: [ "main" ]
   workflow_dispatch: {}
 
 jobs:
+  lint-yaml:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install yamllint
+        run: sudo apt-get update && sudo apt-get install -y yamllint
+      - name: Lint GitHub workflows
+        run: |
+          yamllint -d "{extends: default, rules: {line-length: {max: 140}}}" .github/workflows
+
   call-ci-template:
-    # 👇 give the called workflow the scopes it needs
+    needs: lint-yaml
     permissions:
       contents: read
-      packages: write          # for GHCR push
-      security-events: write   # for CodeQL upload
-      id-token: write          # for OIDC (real path)
+      packages: write
+      security-events: write
+      id-token: write
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/ci-node.yml@main
