--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -13,8 +13,7 @@ jobs:
       - name: Install yamllint
         run: sudo apt-get update && sudo apt-get install -y yamllint
       - name: Lint GitHub workflows
-        run: |
-          yamllint -d "{extends: default, rules: {line-length: {max: 140}}}" .github/workflows
+        run: yamllint .github/workflows
 
   call-ci-template:
     needs: lint-yaml
