--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -1,9 +1,8 @@
-# .github/workflows/service-ci.yml
 name: service-ci
 on:
   pull_request:
   push:
-    branches: [ "dev", "staging", "main" ]
+    branches: ["dev","staging","main"]
   workflow_dispatch: {}
 
 jobs:
@@ -11,8 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: sudo apt-get update && sudo apt-get install -y yamllint
-      - run: yamllint .github/workflows
+
+      - name: Install yamllint
+        run: sudo apt-get update && sudo apt-get install -y yamllint
+
+      - name: Lint GitHub workflows (advisory)
+        run: yamllint -f parsable .github/workflows
+        continue-on-error: true  # prints issues but doesn't fail the job
+
+      - name: YAML syntax sanity (strict, must pass)
+        run: |
+          yamllint \
+            -d '{rules: {document-start: disable, line-length: disable, truthy: disable, comments: disable, indentation: {indent-sequences: consistent}}}' \
+            -f parsable \
+            .github/workflows
+
   call-ci-template:
     needs: lint-yaml
     permissions:
