--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -2,7 +2,7 @@ name: service-ci
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches: ["dev","staging","main"]
   workflow_dispatch: {}
 
 jobs:
@@ -12,9 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install yamllint
         run: sudo apt-get update && sudo apt-get install -y yamllint
-      - name: Lint GitHub workflows
-        run: yamllint .github/workflows
+      - name: Lint GitHub workflows (advisory)
+        run: yamllint -f parsable .github/workflows
         continue-on-error: true
+      - name: YAML syntax sanity (strict, must pass)
+        run: |
+          yamllint \
+            -d '{rules: {document-start: disable, line-length: disable, truthy: disable, comments: disable, indentation: {indent-sequences: consistent}}}' \
+            -f parsable \
+            .github/workflows
 
   call-ci-template:
     needs: lint-yaml
