--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -1,21 +1,37 @@
 name: service-deploy
+
 on:
+  push:
+    branches: ["dev"]  # auto-deploy DEV
   workflow_dispatch:
     inputs:
       env_name:
         type: choice
-        options: [ "staging", "production" ]
+        options: ["dev","staging","production"]
         required: true
-        default: "staging"
+        default: "dev"
 
 jobs:
-  call-deploy-template:
+  auto-deploy-dev:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
     permissions:
       contents: read
-      id-token: write          # needed for az login (real path)
+      id-token: write
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
     with:
-      env_name:  ${{ inputs.env_name }}
+      env_name: dev
       image_repo: ${{ vars.IMAGE_REPO }}
-      image_tag:  ${{ github.run_number }}
+      image_tag: ${{ github.run_number }}
+      chart_path: deploy/chart
+
+  manual-deploy:
+    if: github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: read
+      id-token: write
+    uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
+    with:
+      env_name: ${{ inputs.env_name }}
+      image_repo: ${{ vars.IMAGE_REPO }}
+      image_tag: ${{ github.run_number }}
       chart_path: deploy/chart
