--- a/.github/workflows/ci-node.yml
+++ b/.github/workflows/ci-node.yml
@@ -1,5 +1,5 @@
 name: _ci-node (template)
-on: { workflow_call: {} }
+on: {workflow_call: {}}
 
 jobs:
   ci:
@@ -12,20 +12,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: '18' }
 
-      # Detect Node lockfile
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
       - name: Detect Node lockfile
         id: node
         run: |
           if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
-            echo "has_lock=true" >> $GITHUB_OUTPUT
+            echo "has_lock=true" >> "$GITHUB_OUTPUT"
           else
-            echo "has_lock=false" >> $GITHUB_OUTPUT
+            echo "has_lock=false" >> "$GITHUB_OUTPUT"
           fi
 
-      # Only run npm in real Node projects
       - name: npm ci
         if: ${{ steps.node.outputs.has_lock == 'true' }}
         run: npm ci
@@ -34,7 +34,6 @@ jobs:
         if: ${{ steps.node.outputs.has_lock == 'true' }}
         run: npm test -- --ci
 
-      # DEMO: create a minimal Dockerfile if none exists
       - name: Ensure Dockerfile exists (demo)
         if: ${{ hashFiles('Dockerfile') == '' }}
         run: |
@@ -43,7 +42,6 @@ jobs:
           CMD ["echo","demo image built by CI"]
           EOF
 
-      # DEMO path: push to GHCR (no cloud creds)
       - name: Login to GHCR (demo)
         if: ${{ vars.DEMO_MODE == 'true' }}
         uses: docker/login-action@v3
@@ -60,7 +58,6 @@ jobs:
           push: true
           tags: ${{ vars.IMAGE_REPO }}:${{ github.run_number }}
 
-      # REAL path: push to ACR (requires Azure OIDC)
       - name: Azure login (real)
         if: ${{ vars.DEMO_MODE != 'true' }}
         uses: azure/login@v2
