--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -1,34 +1,122 @@
 name: service-deploy
+
 on:
   push:
-    branches: ["dev","staging","main"]   # deployments are tied to actual branch updates
+    branches: ["dev", "staging", "main"]
   workflow_dispatch:
     inputs:
       env_name:
         type: choice
-        options: ["dev","staging","production"]
+        options: ["dev", "staging", "production"]
         default: "dev"
         required: true
 
+permissions:
+  contents: read
+
 jobs:
-  # Auto deploy when code lands on dev
+  # -------- DEV (auto) --------
   auto-deploy-dev:
-    if: github.ref == 'refs/heads/dev' && github.event_name == 'push'
-    permissions: { contents: read, id-token: write }
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+    name: auto-deploy-dev
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
     with:
       env_name: dev
       image_repo: ${{ vars.IMAGE_REPO }}
-      image_tag: ${{ github.run_number }}
+      image_tag: ${{ github.sha }}
       chart_path: deploy/chart
+    permissions:
+      contents: read
+      id-token: write
+    concurrency:
+      group: deploy-dev
+      cancel-in-progress: true
+    # environment: dev  # uncomment if you want a dev Environment
 
-  # Manual dispatch can target any environment (for on-demand demos)
+  # -------- STAGING (2-phase) --------
+  # Phase 1: auto deploy to staging infra (no approval)
+  staging-deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
+    name: staging-deploy
+    uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
+    with:
+      env_name: staging
+      image_repo: ${{ vars.IMAGE_REPO }}
+      image_tag: ${{ github.sha }}
+      chart_path: deploy/chart
+    permissions:
+      contents: read
+      id-token: write
+    concurrency:
+      group: deploy-staging
+      cancel-in-progress: true
+
+  # Phase 2: release gate for staging (approval required)
+  staging-release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
+    name: staging-release
+    needs: staging-deploy
+    runs-on: ubuntu-latest
+    environment: staging  # Configure approvals/wait timer in Settings → Environments
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Release switch / post-deploy gate
+        run: |
+          echo "Releasing the staged build after approval..."
+          # Example operations:
+          # helm upgrade --install app deploy/chart --reuse-values --set releaseApproved=true
+          # ./scripts/traffic-switch.sh staging
+          # curl -f https://staging.example.com/healthz
+
+  # -------- MAIN promotion chain --------
+  promote-to-staging-from-main:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: promote-to-staging-from-main
+    uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
+    with:
+      env_name: staging
+      image_repo: ${{ vars.IMAGE_REPO }}
+      image_tag: ${{ github.sha }}  # same artifact to enforce true promotion
+      chart_path: deploy/chart
+    permissions:
+      contents: read
+      id-token: write
+    environment: staging
+    concurrency:
+      group: deploy-staging
+      cancel-in-progress: true
+
+  promote-to-production:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: promote-to-production
+    needs: promote-to-staging-from-main
+    uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
+    with:
+      env_name: production
+      image_repo: ${{ vars.IMAGE_REPO }}
+      image_tag: ${{ github.sha }}
+      chart_path: deploy/chart
+    permissions:
+      contents: read
+      id-token: write
+    environment: production
+    concurrency:
+      group: deploy-production
+      cancel-in-progress: true
+
+  # -------- Manual on-demand deploy --------
   manual-deploy:
     if: github.event_name == 'workflow_dispatch'
-    permissions: { contents: read, id-token: write }
+    name: manual-deploy
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/deploy-aks-helm.yml@main
     with:
       env_name: ${{ inputs.env_name }}
       image_repo: ${{ vars.IMAGE_REPO }}
-      image_tag: ${{ github.run_number }}
+      image_tag: ${{ github.sha }}
       chart_path: deploy/chart
+    permissions:
+      contents: read
+      id-token: write
