--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,17 +1,24 @@
 name: CodeQL
+
 on:
   pull_request:
-    branches: ["dev","staging","main"]
+    branches: ["dev", "staging", "main"]
+
+permissions:
+  contents: read
+  security-events: write
+
+concurrency:
+  group: codeql-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   analyze:
     name: Analyze (javascript)
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: github/codeql-action/init@v3
-        with: { languages: javascript }
+        with:
+          languages: javascript
       - uses: github/codeql-action/analyze@v3
