--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -1,28 +1,40 @@
 name: service-ci
+
 on:
   pull_request:
-    branches: ["dev","staging","main"]
+    branches: ["dev", "staging", "main"]
+
+# deny-by-default; jobs escalate only if needed
+permissions:
+  contents: read
+
+concurrency:
+  group: service-ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   lint-yaml:
+    name: lint-yaml
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: sudo apt-get update && sudo apt-get install -y yamllint
-      - name: Lint GitHub workflows (advisory)
+      - name: Install yamllint
+        run: sudo apt-get update && sudo apt-get install -y yamllint
+      - name: Advisory lint (parsable)
         run: yamllint -f parsable .github/workflows
         continue-on-error: true
-      - name: YAML syntax sanity (strict)
+      - name: Strict syntax sanity
         run: |
-          yamllint \
-            -d '{rules: {document-start: disable, line-length: disable, truthy: disable, comments: disable, indentation: {indent-sequences: consistent}}}' \
-            -f parsable .github/workflows
+          yamllint -f parsable \
+            -d '{rules:{document-start: disable, line-length: disable, truthy: disable, comments: disable, indentation:{indent-sequences: consistent}}}' \
+            .github/workflows
 
   call-ci-template:
+    # this job name will appear as: service-ci / call-ci-template / ci (pull_request)
     needs: lint-yaml
-    permissions:
-      contents: read
-      packages: write
-      security-events: write
-      id-token: write
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/ci-node.yml@main
+    # example: if you need extra scopes during CI, uncomment below
+    # permissions:
+    #   packages: write
+    #   security-events: write
+    #   id-token: write
