--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,17 +1,43 @@
 name: CodeQL
+
 on:
   pull_request:
-    branches: ["dev","staging","main"]
+    branches: ["dev", "staging", "main"]
+  push:
+    branches: ["dev", "staging", "main"]
+  schedule:
+    - cron: "0 2 * * 0"  # weekly, Sunday 02:00 UTC
+
+permissions:
+  contents: read
+  security-events: write
+
+concurrency:
+  group: codeql-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   analyze:
     name: Analyze (javascript)
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      contents: read
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["javascript"] # add more later: ["javascript","python","java",...]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: github/codeql-action/init@v3
-        with: { languages: javascript }
-      - uses: github/codeql-action/analyze@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+
+      # Optional for JS, but recommended in the official template
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Analyze
+        uses: github/codeql-action/analyze@v3
