--- a/.github/workflows/ci-node.yml
+++ b/.github/workflows/ci-node.yml
@@ -3,9 +3,13 @@ name: _ci-node (template)
 on:
   workflow_call:
 
-# deny-by-default; callers can escalate if needed
+# Least-privilege at workflow level — callers can escalate if needed
 permissions:
   contents: read
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ci:
@@ -22,6 +26,7 @@ jobs:
         with:
           node-version: '18'
           cache: npm
+          # cache-dependency-path: package-lock.json  # uncomment if lockfile not in repo root
 
       - name: Detect Node lockfile
         id: node
@@ -40,14 +45,18 @@ jobs:
         if: ${{ steps.node.outputs.has_lock == 'true' }}
         run: npm test -- --ci
 
-      # ----- Demo path: push to GHCR (no cloud creds required) -----
+      # ---------- GHCR demo path ----------
       - name: Login to GHCR (demo)
-        if: ${{ vars.DEMO_MODE == 'true' }}
+        if: ${{ vars.DEMO_MODE == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+        # needs packages:write — grant at step level:
+        permissions:
+          contents: read
+          packages: write
 
       - name: Ensure Dockerfile exists (demo)
         if: ${{ vars.DEMO_MODE == 'true' && hashFiles('Dockerfile') == '' }}
@@ -58,14 +67,17 @@ jobs:
           EOF
 
       - name: Build & push (GHCR demo)
-        if: ${{ vars.DEMO_MODE == 'true' }}
+        if: ${{ vars.DEMO_MODE == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) }}
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ vars.IMAGE_REPO }}:${{ github.run_number }}
+          tags: ghcr.io/${{ github.repository_owner }}/oaf-gha-migration-skeleton:${{ github.run_number }}
+        permissions:
+          contents: read
+          packages: write
 
-      # ----- Real path: push to ACR (uses Azure OIDC) -----
+      # ---------- Real ACR path ----------
       - name: Azure login (real)
         if: ${{ vars.DEMO_MODE != 'true' }}
         uses: azure/login@v2
@@ -73,6 +85,20 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        permissions:
+          # id-token only needed if your Azure role assignment uses OIDC
+          id-token: write
+          contents: read
+
+      - name: Docker login to ACR (real)
+        if: ${{ vars.DEMO_MODE != 'true' }}
+        uses: azure/docker-login@v2
+        with:
+          login-server: ${{ vars.ACR_NAME }}.azurecr.io
+          # username/password not required when azure/login OIDC + RBAC is set correctly
+        permissions:
+          id-token: write
+          contents: read
 
       - name: Build & push (ACR real)
         if: ${{ vars.DEMO_MODE != 'true' }}
@@ -83,3 +109,6 @@ jobs:
           context: .
           push: true
           tags: ${{ env.ACR_NAME }}.azurecr.io/app:${{ github.run_number }}
+        permissions:
+          id-token: write
+          contents: read
