--- a/.github/workflows/service-ci.yml
+++ b/.github/workflows/service-ci.yml
@@ -33,8 +33,9 @@ jobs:
     # this job name will appear as: service-ci / call-ci-template / ci (pull_request)
     needs: lint-yaml
     uses: namaimichael/oaf-gha-migration-skeleton/.github/workflows/ci-node.yml@main
-    # example: if you need extra scopes during CI, uncomment below
-    # permissions:
-    #   packages: write
-    #   security-events: write
-    #   id-token: write
+    permissions:               # 👈 match what the reusable job requests
+      contents: read
+      packages: write
+      id-token: write
+      security-events: write
+
