--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -3,18 +3,10 @@ name: _deploy-demo (template)
 on:
   workflow_call:
     inputs:
-      env_name:
-        required: true
-        type: string
-      image_repo:
-        required: true
-        type: string
-      image_tag:
-        required: true
-        type: string
-      chart_path:
-        required: true
-        type: string
+      env_name:   {required: true, type: string}
+      image_repo: {required: true, type: string}
+      image_tag:  {required: true, type: string}
+      chart_path: {required: true, type: string}
 
 jobs:
   demo:
