--- a/.github/workflows/ci-node.yml
+++ b/.github/workflows/ci-node.yml
@@ -3,10 +3,6 @@ name: _ci-node (template)
 on:
   workflow_call:
 
-# Least-privilege at workflow level — callers can escalate if needed
-permissions:
-  contents: read
-
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
@@ -16,6 +12,7 @@ jobs:
     name: ci
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    # NOTE: no job-level permissions here so the caller controls scope
 
     steps:
       - name: Checkout
@@ -26,7 +23,7 @@ jobs:
         with:
           node-version: '18'
           cache: npm
-          # cache-dependency-path: package-lock.json  # uncomment if lockfile not in repo root
+          # cache-dependency-path: package-lock.json
 
       - name: Detect Node lockfile
         id: node
@@ -51,12 +48,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-        # needs packages:write — grant at step level:
-        permissions:
-          contents: read
-          packages: write
 
       - name: Ensure Dockerfile exists (demo)
         if: ${{ vars.DEMO_MODE == 'true' && hashFiles('Dockerfile') == '' }}
@@ -73,9 +66,6 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/oaf-gha-migration-skeleton:${{ github.run_number }}
-        permissions:
-          contents: read
-          packages: write
 
       # ---------- Real ACR path ----------
       - name: Azure login (real)
@@ -85,20 +75,12 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        permissions:
-          # id-token only needed if your Azure role assignment uses OIDC
-          id-token: write
-          contents: read
 
       - name: Docker login to ACR (real)
         if: ${{ vars.DEMO_MODE != 'true' }}
         uses: azure/docker-login@v2
         with:
           login-server: ${{ vars.ACR_NAME }}.azurecr.io
-          # username/password not required when azure/login OIDC + RBAC is set correctly
-        permissions:
-          id-token: write
-          contents: read
 
       - name: Build & push (ACR real)
         if: ${{ vars.DEMO_MODE != 'true' }}
@@ -109,6 +91,3 @@ jobs:
           context: .
           push: true
           tags: ${{ env.ACR_NAME }}.azurecr.io/app:${{ github.run_number }}
-        permissions:
-          id-token: write
-          contents: read
